5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1764_1580.log
== TEST (2019-05-23 21:37:32) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=array(input("nomes: "))

i-0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i<6]and(notas[i]>=0))
		reprovado=reprovado+1
	
	
	
	
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovados)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
File "XXXX", line 20
    elif(notas[i<6]and(notas[i]>=0))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:37:55) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=array(input("nomes: "))

i-0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i<6]and(notas[i]>=0)):
		reprovado=reprovado+1
	
	
	
	
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovados)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:39:37) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=array(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i<6]and(notas[i]>=0)):
		reprovado=reprovado+1
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovados)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:41:50) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i<6]and(notas[i]>=0)):
		reprovado=reprovado+1
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovados)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:42:06) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i<6]and(notas[i]>=0)):
		reprovado=reprovado+1
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovados)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:43:09) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovados)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
File "XXXX", line 20
    elif(notas[i]<6)and(notas[i]>=0)):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:43:14) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i]<6)and(notas[i]>=0):
		reprovado=reprovado+1
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovados)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:43:45) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0

while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif(notas[i]>=6):
		aprovado=aprovado+1
	
	elif(notas[i]<6)and(notas[i]>=0):
		reprovado=reprovado+1
	cont=cont+1
	i=i+1

print(faltou)	
print(aprovado)
print(reprovado)

media=aprovado+reprovado/size(notas)
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:59:09) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=nota[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	
	elif(notas[i]>=0)and(notas[i]<10):
	
	soma=soma+notas[i]
	
media=soma/aprovado+reprovado	

	



-- ERROR:
File "XXXX", line 26
    soma=soma+notas[i]
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:59:22) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=nota[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	
	elif(notas[i]>=0)and(notas[i]<10):
		soma=soma+notas[i]
	
media=soma/aprovado+reprovado	

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:00:26) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	
	elif(notas[i]>=0)and(notas[i]<10):
		soma=soma+notas[i]
	
	
	i=i+1
	cont=cont+1
media=soma/aprovado+reprovado	

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:00:38) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	
	elif(notas[i]>=0)and(notas[i]<10):
		soma=soma+notas[i]
	
	
	i=i+1
	cont=cont+1
media=soma/aprovado+reprovado	

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:01:10) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	
	elif(notas[i]>=0)and(notas[i]<10):
		soma=soma+notas[i]
	
	
	i=i+1
	cont=cont+1
media=soma/aprovado+reprovado	

print(media)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:02:27) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))

nomes=eval(input("nomes: "))

i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	
	elif(notas[i]>=0)and(notas[i]<10):
		media=sum(notas)/size(notas)
	
	
	i=i+1
	cont=cont+1


print(media)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:06:13) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))



i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	elif(notas[i]>=0)	and(notas[i]<=10):
		soma=soma+notas[i+1]
		cont=cont+1
	i=i+1
media=soma/cont	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:07:44) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))



i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]
while(cont<size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	elif(notas[i]>=0)	and(notas[i]<=10):
		soma=soma+notas[i+1]
		cont=cont+1
	i=i+1
media=soma/cont	
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:09:11) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))



i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]
while(cont < size(notas)):
	if(notas[i]==-1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	elif(notas[i]>=0)	and(notas[i]<=10):
		soma=soma+notas[i+1]
		cont=cont+1
	i=i+1
media=soma/cont	
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:09:42) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))



i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]

while(cont < size(notas)):
	if(notas[i] == -1):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	elif(notas[i]>=0)	and(notas[i]<=10):
		soma=soma+notas[i+1]
		cont=cont+1
	i=i+1
media=soma/cont	
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:18:03) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))



i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]

while(i < size(notas)):
	if(notas[i] == ):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	elif(notas[i]>=0)	and(notas[i]<=10):
		soma=soma+notas[i+1]
		cont=cont+1
	i=i+1
media=soma/cont	
print(media)


-- ERROR:
File "XXXX", line 15
    if(notas[i] == ):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 10:18:20) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))



i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]

while(i < size(notas)):
	if(notas[i] ==-1 ):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	elif(notas[i]>=0)	and(notas[i]<=10):
		soma=soma+notas[i+1]
		cont=cont+1
	i=i+1
media=soma/cont	
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 12:18:03) 
-- CODE:
from numpy import *

notas=array(eval(input("Notas: ")))



i=0
cont=0
faltou=0
aprovado=0
reprovado=0
soma=notas[i]

while(i < size(notas)):
	if(notas[i] ==-1 ):
		faltou=faltou+1
	
	elif((notas[i]>=6)and(notas[i]<=10)):
		aprovado=aprovado+1
	
	elif((notas[i]<6)and(notas[i]>=0)):
		reprovado=reprovado+1
	
	elif(notas[i]>=0)	and(notas[i]<=10):
		soma=soma+notas[i+1]
		cont=cont+1
	i=i+1
media=soma/cont	
print(media)


-- EXECUTION TIME:
0.576239
-- ERROR:
/home/codebench/codes/1764/1580/main.py:28: RuntimeWarning: divide by zero encountered in long_scalars
  media=soma/cont

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:51:22) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=input("Nomes: ")

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]=-1):
		faltaram=faltaram+1
	elif(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovaddos+1
	elif(nota[cont]<6 and notas[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(media)
	
-- ERROR:
File "XXXX", line 15
    if(nota[cont]=-1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:52:26) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=input("Nomes: ")

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovaddos+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and notas[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:52:39) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=input("Nomes: ")

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovaddos+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and notas[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:52:44) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=input("Nomes: ")

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovaddos+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and notas[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:53:17) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=input("Nomes: ")

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovaddos+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:53:41) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=input("Nomes: ")

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:54:20) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:55:34) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=input("Nomes: ")

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:57:46) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:59:46) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

cont=0
faltaram=0
aprovados=0
reprovados=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

media=sum(vetor)/aprovados+reprovados	

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:01:16) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

cont=0
faltaram=0
aprovados=0
reprovados=0




while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota-nota[cont]])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	

print(vetor)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:03:20) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

i-0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+nota[i]
		i=i+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/aprovados+reprovados

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:03:43) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

i=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+nota[i]
		i=i+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/aprovados+reprovados

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:04:38) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

i=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
		i=i+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/aprovados+reprovados

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:05:28) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		foram=foram+1
		soma=soma+soma
		i=i+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/foram

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:06:22) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		
		soma=soma+soma
		foram=foram+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/foram

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:06:33) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=0



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		
		soma=soma+soma
		foram=foram+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/foram

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:09:24) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
		foram=foram+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/foram

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:09:38) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
		foram=foram+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/foram

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:10:02) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
		foram=foram+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/foram

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:11:06) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/size(nota)-faltaram

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:11:40) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

foram=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:13:23) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

i=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[i]




while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
		i=i+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:13:38) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))

i=0
cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[i]




while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
		i=i+1
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:14:26) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]




while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)+6

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:16:10) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]




while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:16:37) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]




while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=sum(vetor)/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:16:46) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]




while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=sum(vetor)/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:18:02) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=array([nota])
	elif(nota[cont]==max(notas)):
		maior=nome[cont]
	cont=cont+1	


media=sum(vetor)/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:19:38) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		vetor=vetor[cont]+nota[cont]
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=sum(vetor)/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:23:26) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:23:48) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)+7

print(round(media, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:39:39) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:40:14) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:41:18) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
maior=f


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:41:56) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
maior='f'


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:43:17) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
maior=nome[cont]


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(nota[cont]==max(nota)):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:45:12) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
maior=nome[cont]


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(nota[cont]==max(nota)):
		nome=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:47:01) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
maior=nome[cont]


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(max(nota)==nota[cont]):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:35:54) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
maior=nome[cont]


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(max(nota)==nota[cont]):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- EXECUTION TIME:
0.32154
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
1.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
-0.2
ALICE
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
0.11
CLARA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:32) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
maior='a'


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+notas[cont]
	
	elif(max(nota)==nota[cont]):
		maior=nome[cont]
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:38:40) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	
	elif(max(nota)==nota[cont]):
		maior=nome[cont]
	
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:38) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	
	elif(max(nota)==nota[cont]):
		print(nome[cont])
	
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))

print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:40:33) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))



while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	
	elif(max(nota)==nota[cont]):
		print(nome[cont])
	
	cont=cont+1	


media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:57) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
i=0


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	
	elif(max(nota)==nota[cont]):
		print(nome[i])
	
	cont=cont+1	

	i=i+1

media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:43:02) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=eval(input("Nomes: "))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
i=0


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	
	elif(max(nota)==nota[i]):
		print(nome[i])
	
	cont=cont+1	

	i=i+1

media=soma/(size(nota)-faltaram)

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))


-- EXECUTION TIME:
0.520275
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
1.0
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
-0.2
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
0.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:54:45) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=array(eval(input("Nomes: ")))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
i=0


while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	
	elif(max(nota)==nota[i]):
		maior=nome[i]
	
	cont=cont+1	

	i=i+1

media=soma/aprovados+reprovados

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:55:47) 
-- CODE:
from numpy import *

nota=array(eval(input("Notas: ")))

nome=array(eval(input("Nomes: ")))


cont=0
faltaram=0
aprovados=0
reprovados=0
soma=nota[cont]
vetor= zeros(size(nota))
i=0
maior=""

while(cont<size(nota)):
	if(nota[cont]>=6 and nota[cont]<=10):
		aprovados=aprovados+1
	
	elif(nota[cont]==-1):
		faltaram=faltaram+1
	
	elif(nota[cont]<6 and nota[cont]>=0):	
		reprovados=reprovados+1
	
	elif(nota[cont]>=0 and nota[cont]<=10):
		soma=soma+soma
	
	elif(max(nota)==nota[i]):
		maior=nome[i]
	
	cont=cont+1	

	i=i+1

media=soma/aprovados+reprovados

print(faltaram)
print(aprovados)
print(reprovados)

print(round(media, 2))
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
